# virtual-keyboard-prototype-1

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  camera-preview.cxx  id_to_name.hxx  keyboard-writer.cxx  pixel-to-realspace.cxx  reciever.cxx  sender.cxx  virtual-keyboard-tester.cxx  virtual-keyboard-viewer.cxx  virtual-keyboard.csv  virtual-keyboard.sqlite3  virtual-keyboard.xlsx
finger-position/: CMakeLists.txt  chrono_helper.hxx  convert-color.hxx  cv_gui_helper.hxx  cv_mat_filter.hxx  cv_mat_helper.hxx  cv_video_helper.hxx  finger-position.cxx  magick_cv_helper.hxx
integration-sample/: CMakeLists.txt  FindGlog.cmake  camera-capture.cxx  camera-capture.hxx  commandline_helper.cxx  commandline_helper.hxx  configuration.hxx  cv_gui_helper.hxx  cv_mat_filter.hxx  etupirka.cxx  etupirka.hxx  finger-detector.cxx  finger-detector.hxx  gui.cxx  gui.hxx  image_processor.hxx  key-invoker.cxx  key-invoker.hxx  libWRP-SQLite3  libWRP-key  logger.cxx  logger.hxx  main.cxx  network-common.hxx  space-converter.cxx  space-converter.hxx  udp-reciever.cxx  udp-reciever.hxx  udp-sender.cxx  udp-sender.hxx  virtual-keyboard.build.sh  virtual-keyboard.csv  virtual-keyboard.cxx  virtual-keyboard.hxx
misc/: cross-point.xlsx  env.mqo  env.txt  finger-position.txt  hist.odc
